--- a/src/less/post.less
+++ b/src/less/post.less
@@ -102,7 +102,7 @@
 			padding-bottom: 9px;
 		}
 		@media(max-width: 600px) {
-			font-size: 1.4em;
+			font-size: 1.7em;
 			margin-left: calc(~"-50vw + 50%");
 			margin-right: calc(~"-50vw + 50%");
 			width: auto !important;
@@ -125,7 +125,7 @@
 			font-size: 1.3em;
 		}
 		@media(max-width: 600px) {
-			font-size: 1.1em;
+			font-size: 1.3em;
 			text-align: center;
 			line-height: 1.4;
 		}
@@ -716,7 +716,7 @@
 	figure {
 		width: fit-content;
 		margin: 40px auto 11px;
-		    overflow: visible;
+		overflow: visible;
 
 		&:hover{
 			cursor: zoom-in;
@@ -727,9 +727,9 @@
 			border: 1px solid #d8d8d8;
 		}
 		@media(max-width: 600px) {
-			margin-left: calc(~"-50vw + 50%") !important;
+			margin-left: calc(~"-51vw + 50%") !important;
 			margin-right: calc(~"-50vw + 50%") !important;
-			width: auto !important;
+			width: 120% !important;
 			margin-top: 25px;
 			margin-bottom: 0;
 
