--- a/src/less/postlist.less
+++ b/src/less/postlist.less
@@ -22,7 +22,7 @@
       }
 
       .post-excerpt {
-        font-size: 1.1em;
+        font-size: .9em;
         font-family: 'CompassSans-Regular';
       }
 
@@ -34,6 +34,7 @@
         position: absolute;
         width: 85%;
         bottom: 10px;
+        padding-bottom:10px;
       }
 
       .tags,
@@ -48,7 +49,7 @@
 .postlist {
 
   .tag-description {
-    font-size: 1.1em;
+    font-size: .9em;
     line-height: 1.5;
     max-width: 90%;
     margin: 20px auto 0;
