--- a/assets/css/maintwitter.css
+++ b/assets/css/maintwitter.css
@@ -1,5 +1,3 @@
-
-
 .root.timeline.twitter-timeline {
   background-color: #2c3e50;
 }
@@ -26,10 +24,11 @@
   top: 2px !important;
   left: -54px !important;
   position: absolute !important;
+  margin: 0 !important;
 }
 
 .timeline-Tweet-media {
-  margin-bottom: 0 !important;
+  margin: 0 !important;
 }
 
 .timeline-Viewport {}
@@ -37,6 +36,10 @@
 .timeline-Tweet-author {
   position: unset;
   padding-left: 0 !important;
+}
+
+.timeline-Tweet-retweetCredit {
+  margin-left: 0;
 }
 
 .timeline-Tweet-metadata,
@@ -51,18 +54,24 @@
   margin-right: 19px;
   color: #565656;
   float: right;
-  width: 230px;
+  width: 76%;
   margin-right: 0;
   transition: all .3s ease-out;
   padding: 15px;
-      position: relative;
+  position: relative;
+}
+
+.timeline-tweet a:first-of-type {
+  display: block;
+  margin: 10px 0px;
 }
 
 .timeline-tweet:hover {
   background: rgba(139, 158, 175, 0.6) !important;
 }
+
 .timeline-Tweet-text {
-      margin-left: 0;
+  margin-left: 0;
 }
 
 .root.timeline.twitter-timeline p, .root.timeline.twitter-timeline a, .root.timeline.twitter-timeline ol, .root.timeline.twitter-timeline ul, .root.timeline.twitter-timeline li {
@@ -109,9 +118,7 @@
 .timeline-TweetList .timeline-TweetList-tweet:nth-of-type(1),
 .timeline-TweetList .timeline-TweetList-tweet:nth-of-type(2),
 .timeline-TweetList .timeline-TweetList-tweet:nth-of-type(3),
-.timeline-TweetList .timeline-TweetList-tweet:nth-of-type(4) {
-
-}
+.timeline-TweetList .timeline-TweetList-tweet:nth-of-type(4) {}
 
 .timeline-LoadMore-prompt {
   display: none;
