--- a/src/less/code.less
+++ b/src/less/code.less
@@ -2,7 +2,7 @@
 
 pre {
   white-space: pre-wrap;
-  transition: all 0.5s easeout;
+  transition: all 0.5s ease-out;
   position: relative;
   overflow-y: hidden;
   padding: 0 !important;
@@ -18,6 +18,7 @@ pre {
 
   code {
     overflow-y: hidden;
+    transition: all 0.5s ease-out;
   }
 
   span {
