--- a/src/less/customtemplates.less
+++ b/src/less/customtemplates.less
@@ -6,7 +6,7 @@
 .paged,
 .tag-template {
   .tag-name {
-    font-size: 1.5em;
+    font-size: 1.3em;
     margin-top:0;
 
 
@@ -56,6 +56,7 @@
       display: flex;
       flex-direction: column;
       margin: -14px 0 0 !important;
+          font-size: .9em;
     }
   }
 
@@ -252,7 +253,7 @@
         display: block;
         margin-bottom: 2px;
         @media (max-width: 1040px) {
-          margin: 0 15px 3px;
+          margin: 0 auto 3px;
         }
 
         i {
