--- a/src/less/footer.less
+++ b/src/less/footer.less
@@ -5,11 +5,11 @@
 	footer
 ====================================================*/
 .main-footer {
-	background: linear-gradient(to bottom,rgba(0, 184, 255, 0.48),rgba(41,58,63,0));
+	/*background: linear-gradient(to bottom,rgba(0, 184, 255, 0.48),rgba(41,58,63,0));*/
+	background: #0089b7;
   padding: 35px 10%;
   color: #fff;
   margin-top: 30px;
-  background-color: #100c44;
 	box-shadow: inset 0 1px 6px 0 rgba(44,50,63,0.41);
 	display: flex;
 	justify-content: space-around;
@@ -72,13 +72,13 @@
 			a {
 				border: 0;
 		    color: #fff;
-		    background: linear-gradient(-40deg,#0359a2,#10909c);
+		    background: #1d5477;
 				padding: 4px 12px;
 				font-size: .8em;
 		    display: inline-block;
 		    height: fit-content;
 		    width: fit-content;
-		    margin: 0 10px 10px 0;
+		    margin: 0 8px 8px 0;
 				flex-grow: 1;
 		    text-align: center;
 				transition: all .3s easeout;
