--- a/src/less/widgets.less
+++ b/src/less/widgets.less
@@ -151,13 +151,13 @@
 			line-height: 1.5em;
 			display: inline-block;
 			margin: 0 10px 10px 0;
-			font-size: 14px!important;
+			font-size: .8em !important;
 			-webkit-transition: all 0.2s ease;
 			-moz-transition: all 0.2s ease;
 			-ms-transition: all 0.2s ease;
 			-o-transition: all 0.2s ease;
 			transition: all 0.2s ease;
-			background: #d3e2f5;
+			background: #dcecff;
 			flex-grow: 1;
 			 text-align: center;
 			.transition(all 0.2s ease);
