--- a/src/less/code.less
+++ b/src/less/code.less
@@ -41,7 +41,10 @@ p > code {
   overflow-y: visible !important;
   width: fit-content;
   font-size: 13px !important;
-  background: #f1f5f8;
+  background: #353946;
+  padding: 5px;
+  border-radius: 2px;
+  color: #aef1ff;
 }
 
 code {
