--- a/src/less/code.less
+++ b/src/less/code.less
@@ -41,11 +41,13 @@ p > code {
   overflow-y: visible !important;
   width: fit-content;
   font-size: 13px !important;
-  background: #353946;
-  padding: 5px;
+  background: #65676f;
+  padding: 5px 8px;
   border-radius: 2px;
-  color: #aef1ff;
+  color: #c4f5ff;
+  font-weight: 500;
 }
+
 
 code {
   margin: 0;
