--- a/src/less/screen.less
+++ b/src/less/screen.less
@@ -26,6 +26,7 @@
 @import 'swiper.less';
 @import 'transactional.less';
 @import 'table.less';
+@import 'comments.less';
 
 /*====================================================
 	about author and comment and next-prev link
