footer and signup

--- a/partials/scripts.hbs
+++ b/partials/scripts.hbs
@@ -1,5 +1,6 @@
 <!-- scripts -->
 <script src="{{asset "/js/includes/highlight.pack.js"}}"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.4/TweenMax.min.js"></script>
 <script src="{{asset "/js/main.min.js"}}"></script>
 {{#has author="Matt Alhonte"}}<script src="{{asset "/js/includes/previews.js"}}"></script>{{/has}}
 {{#is "author"}}<script src="{{asset "/js/includes/previews.js"}}"></script>{{/is}}
