--- a/src/less/postfooter.less
+++ b/src/less/postfooter.less
@@ -10,8 +10,8 @@
 	align-items: center;
 	height: 85px;
 	padding: 0;
-  padding-top: 20px;
-	border-top: 1px solid #efefef;
+  padding-bottom: 20px;
+	border-bottom: 1px solid #efefef;
 	@media(max-width: 800px) {
 		display: block;
 		height: fit-content;
