--- a/src/less/screen.less
+++ b/src/less/screen.less
@@ -27,6 +27,7 @@
 @import 'transactional.less';
 @import 'table.less';
 @import 'comments.less';
+@import 'signup.less';
 
 /*====================================================
 	about author and comment and next-prev link
