--- a/src/less/comments.less
+++ b/src/less/comments.less
@@ -1,10 +1,8 @@
 #comment-box {
   background: white;
-  box-shadow: 0 0 5px rgba(80,82,204,.1)!important;
   .body {
     padding-left: 15px;
     padding-right: 15px;
-    margin-top: 25px;
     padding: 40px 60px 20px;
 
 
@@ -145,7 +143,7 @@
   .comments {
     padding: 0;
     margin-top: 0;
-    border-bottom: 1px solid #eaeaea;
+    border-bottom: 1px dashed #f5f5f5;
     margin-bottom: 30px;
     padding-bottom: 10px;
     list-style: none;
