--- a/src/less/footer.less
+++ b/src/less/footer.less
@@ -5,14 +5,16 @@
 	footer
 ====================================================*/
 .main-footer {
-	/*background: linear-gradient(to bottom,rgba(0, 184, 255, 0.48),rgba(41,58,63,0));*/
-	background: #0089b7;
+	background: url(../images/FOOT5.jpg);
+	background-size: cover;
+	/*background: #0089b7;*/
   padding: 35px 10%;
   color: #fff;
   margin-top: 30px;
 	box-shadow: inset 0 1px 6px 0 rgba(44,50,63,0.41);
 	display: flex;
 	justify-content: space-around;
+	background-repeat-y: repeat;
 
 	@media(max-width: 1000px) {
 		padding: 30px;
@@ -144,7 +146,7 @@
 					margin: 0;
 					line-height: 1.4;
 					font-family: Gordita-Regular,sans-serif !important;
-					font-weight: 500;
+					font-weight: 700;
 					display: block;
 
 					&:hover {
@@ -172,8 +174,7 @@
 
 				.date,
 				.tags{
-					color: @white;
-					opacity: 0.5;
+					color:#000102;
 					font-size: 0.8em;
 					margin-top: 9px;
 					font-weight: 200;
