footer and signup

--- a/partials/signup.hbs
+++ b/partials/signup.hbs
@@ -11,9 +11,9 @@
 
   <div class="signup-form un" style="visibility:hidden;">
     <!--<input id="username" class="form-control tr" placeholder="Username" type="text">-->
-    <input id="email" class="form-control tr" placeholder="Email" type="text">
-    <input id="password" class="form-control tr" placeholder="Password" type="password">
-    <button type="button" id="createBtn" class="form-control button-control tr">CREATE ACCOUNT</button>
+    <input id="signup-email" class="form-control tr" placeholder="Email" type="text">
+    <input id="signup-password" class="form-control tr" placeholder="Password" type="password">
+    <button type="button" id="signup-button" class="form-control button-control tr">CREATE ACCOUNT</button>
   </div>
 
   <div class="options un" style="visibility:hidden;">
