footer and signup

--- a/custom-signup-confirm.hbs
+++ b/custom-signup-confirm.hbs
@@ -47,7 +47,7 @@ $(document).ready(function(){
   const token = params.get('token');
   const tokenId = params.get('tokenId');
   console.log('token = '+ token);
-  console.log('tokenID = '+ tokenID);
+  console.log('tokenId = '+ tokenId);
   // Confirm the user's email/password account
   const emailPassClient = stitchClient.defaultAppClient.auth.getProviderClient(UserPasswordAuthProviderClient.factory);
 
