--- a/partials/footer.hbs
+++ b/partials/footer.hbs
@@ -1,5 +1,6 @@
 <!-- start main-footer -->
 	<footer class="main-footer">
+		<div class="footer-container">
 				<!-- start first footer widget area -->
 					{{> widget-recentpost}}
 				<!-- end first footer widget area -->
@@ -21,6 +22,7 @@
 				<!-- start third footer widget area -->
 					{{> widget-tagcloud}}
 				<!-- end third footer widget area -->
+			</div>
 	</footer>
 	<!-- end main-footer -->
 
