--- a/partials/widget-authors.hbs
+++ b/partials/widget-authors.hbs
@@ -1,5 +1,5 @@
 <!-- start widget -->
-<div class="widget">
+<div class="widget contributors">
 	<h3 class="title">Contributors</h3>
 	<div class="recent-post">
 		{{#get "users"}}
