--- a/src/less/footer.less
+++ b/src/less/footer.less
@@ -12,9 +12,14 @@
   color: #fff;
   margin-top: 30px;
 	box-shadow: inset 0 1px 6px 0 rgba(44,50,63,0.41);
-	display: flex;
-	justify-content: space-around;
 	background-repeat-y: repeat;
+
+	.footer-container{
+		max-width: 1000px;
+		margin: auto;
+		display: flex;
+		justify-content: space-between;
+	}
 
 	@media(max-width: 1000px) {
 		padding: 30px;
@@ -26,6 +31,16 @@
 		padding: 30px;
 	}
 
+	.contributors {
+		.single-author-name{
+				font-size: .9em !important;
+			}
+
+			.role {
+				 color: #cae4f3;
+			}
+	}
+
 	.widget {
 		padding: 10px 0;
 		width:28%;
@@ -34,6 +49,8 @@
 		.about-title {
 			margin:0;
 		}
+
+
 
 		@media(max-width: 800px){
 			padding: 0;
@@ -76,13 +93,14 @@
 		    color: #fff;
 		    background: #1d5477;
 				padding: 4px 12px;
-				font-size: .8em;
+				font-size: .85em;
 		    display: inline-block;
 		    height: fit-content;
 		    width: fit-content;
 		    margin: 0 8px 8px 0;
 				flex-grow: 1;
 		    text-align: center;
+				font-family: Gordita-Regular;
 				transition: all .3s easeout;
 
 
@@ -159,8 +177,7 @@
 				flex-direction: column;
 
 					.role {
-						color: #fff;
-				    opacity: .5;
+						color: #cae4f3;
 						font-size: .8em;
 						margin-top: 2px;
 				    font-weight: 200;
@@ -174,8 +191,8 @@
 
 				.date,
 				.tags{
-					color:#000102;
-					font-size: 0.8em;
+					color:#cae4f3;
+					font-size: 0.9em;
 					margin-top: 9px;
 					font-weight: 200;
 					font-family: 'Gordita-Regular', sans-serif;
