--- a/custom-author-archive.hbs
+++ b/custom-author-archive.hbs
@@ -21,8 +21,8 @@
 							{{content}}
 						</div>
 						<div class="author-container">
- 						{{#get "authors" limit="all" include="count.posts" order="count.posts desc" }}
- 							{{#foreach authors}}
+ 						{{#get "users" limit="all" include="count.posts" order="count.posts desc" }}
+ 							{{#foreach users}}
 
 								<div class="about-author">
 									{{#if cover_image}}
