--- a/src/less/customtemplates.less
+++ b/src/less/customtemplates.less
@@ -256,6 +256,21 @@
       }
     }
 
+    .author-social {
+      .social-btns{
+        padding:0;
+        display:block;
+      }
+      .btn {
+        font-size: 18px;
+        height: fit-content;
+      }
+
+      i {
+        margin: 0;
+      }
+    }
+
     .meta-info {
       font-size: 12px;
       line-height: 1.5;
