--- a/src/less/social.less
+++ b/src/less/social.less
@@ -18,7 +18,8 @@
   left: -140%;
 }
 
-.social-btns .btn .fab {
+.social-btns .btn .fab,
+.author-social .btn .fab {
   transform: scale(1);
   margin: 0 10px 0 0;
   transition: all .2s ease-out;
@@ -31,64 +32,64 @@
   background-color: #3b5998;
 }
 
-.social-btns .btn.facebook .fa {
+.btn.facebook .fa {
   color: #3b5998;
 }
 
-.social-btns .btn.twitter:before {
+.btn.twitter:before {
   background-color: #3cf;
 }
 
-.social-btns .btn.twitter .fa {
+.btn.twitter .fa {
   color: #3cf;
 }
 
-.social-btns .btn.linkedin .fa {
+.btn.linkedin .fa {
   color: #4875B4;
 }
 
-.social-btns .btn.google:before {
+.btn.google:before {
   background-color: #dc4a38;
 }
 
-.social-btns .btn.google .fa {
+.btn.google .fa {
   color: #dc4a38;
 }
 
-.social-btns .btn.dribbble:before {
+.btn.dribbble:before {
   background-color: #f26798;
 }
 
-.social-btns .btn.linkedin:before {
+.btn.linkedin:before {
   background-color: #4875B4;
 }
 
-.social-btns .btn.tumblr:before {
+.btn.tumblr:before {
   background-color: #35465c;
 }
 
-.social-btns .btn.dribbble .fa {
+.btn.dribbble .fa {
   color: #f26798;
 }
 
-.social-btns .btn.skype:before {
+.btn.skype:before {
   background-color: #00aff0;
 }
 
-.social-btns .btn.skype .fab {
+.btn.skype .fab {
   color: #00aff0;
 }
 
-.social-btns .btn.rss:before {
+.btn.rss:before {
   background-color: #ff6501;
 }
 
-.social-btns .btn.github:before,
-.social-btns .btn.medium:before {
+.btn.github:before,
+.btn.medium:before {
   background-color: #000;
 }
 
-.social-btns .btn.rss .fa {
+.btn.rss .fa {
   color: #ff6501;
 }
 
