--- a/src/less/social.less
+++ b/src/less/social.less
@@ -206,6 +206,10 @@
   color: lighten(@github-color, 10%)
 }
 
+.pocket i {
+  color: lighten(#f14861, 10%);
+}
+
 .rss i {
   color: lighten(@rss-color, 20%)
 }
