--- a/custom-author-archive.hbs
+++ b/custom-author-archive.hbs
@@ -117,30 +117,36 @@ stitchClient.callFunction("FullAuthorDetails").then(result => {
 	$.each( result, function( key, value ) {
 	  console.log(value);
 		var author = result.author;
-		$("." + author).find('title').html(result.title);
+		$("." + author).find('.title').html(result.title);
 
 		if (result.facebook){
-			$("." + author).find('facebook').attr('href', result.facebook));
+			$("." + author).find('.facebook').children().attr('href', result.facebook));
+			$("." + author).find('.facebook').css('display', 'block');
 		}
 
 		if (result.linkedin){
-			$("." + author).find('linkedin').attr('href', result.linkedin));
+			$("." + author).find('.linkedin').children().attr('href', result.linkedin));
+			$("." + author).find('.facebook').css('display', 'block');
 		}
 
 		if (result.twitter){
-			$("." + author).find('twitter').attr('href', result.twitter));
+			$("." + author).find('.twitter').children().attr('href', result.twitter));
+			$("." + author).find('.facebook').css('display', 'block');
 		}
 
 		if (result.quora){
-			$("." + author).find('quora').attr('href', (result.quora));
+			$("." + author).find('.quora').children().attr('href', (result.quora));
+			$("." + author).find('.facebook').css('display', 'block');
 		}
 
 		if (result.pocket){
-			$("." + author).find('facebook'.attr('href', result.pocket));
+			$("." + author).find('.facebook'.children().attr('href', result.pocket));
+			$("." + author).find('.facebook').css('display', 'block');
 		}
 
 		if (result.github){
-			$("." + author).find('facebook').attr('href', result.github));
+			$("." + author).find('.github').children().attr('href', result.github));
+			$("." + author).find('.facebook').css('display', 'block');
 		}
 
 
