--- a/src/less/customtemplates.less
+++ b/src/less/customtemplates.less
@@ -50,13 +50,14 @@
 
   .about-content {
     & > p {
-      margin: 0 40px 20px !important;
+      margin: 30px 44px 30px!important;
+      font-size: .9em;
     }
     @media(max-width: 800px) {
       display: flex;
       flex-direction: column;
       margin: -14px 0 0 !important;
-          font-size: .9em;
+
     }
   }
 
@@ -249,7 +250,7 @@
     }
 
     .author-social {
-      .share-icons{
+      .author-icons{
         list-style: none;
         display: flex;
         justify-content: space-between;
