--- a/custom-author-archive.hbs
+++ b/custom-author-archive.hbs
@@ -113,44 +113,44 @@
 <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 <script>
 stitchClient.callFunction("FullAuthorDetails").then(result => {
-	//console.log(JSON.stringify(result));
+	authorObj = JSON.stringify(result);
 
-	$.each( result, function( key, value ) {
-		console.log('plain result = ' + result);
-	  console.log('result' + result);
+	$.each( authorObj, function( key, value ) {
+		console.log('plain authorObj = ' + authorObj);
+	  console.log('authorObj' + authorObj);
+		console.log('value' + value);
 		console.log('value' + value);
 		console.log('key' + key);
-		console.log('key' + key);
-		var author = result.author;
-		$("." + author).find('.title').html(result.title);
+		var author = authorObj.author;
+		$("." + author).find('.title').html(authorObj.title);
 
-		if (result.facebook){
-			$("." + author).find('.facebook').children().attr('href', result.facebook);
+		if (authorObj.facebook){
+			$("." + author).find('.facebook').children().attr('href', authorObj.facebook);
 			$("." + author).find('.facebook').css('display', 'block');
 		}
 
-		if (result.linkedin){
-			$("." + author).find('.linkedin').children().attr('href', result.linkedin);
+		if (authorObj.linkedin){
+			$("." + author).find('.linkedin').children().attr('href', authorObj.linkedin);
 			$("." + author).find('.facebook').css('display', 'block');
 		}
 
-		if (result.twitter){
-			$("." + author).find('.twitter').children().attr('href', result.twitter);
+		if (authorObj.twitter){
+			$("." + author).find('.twitter').children().attr('href', authorObj.twitter);
 			$("." + author).find('.facebook').css('display', 'block');
 		}
 
-		if (result.quora){
-			$("." + author).find('.quora').children().attr('href', result.quora);
+		if (authorObj.quora){
+			$("." + author).find('.quora').children().attr('href', authorObj.quora);
 			$("." + author).find('.facebook').css('display', 'block');
 		}
 
-		if (result.pocket){
-			$("." + author).find('.facebook').children().attr('href', result.pocket);
+		if (authorObj.pocket){
+			$("." + author).find('.facebook').children().attr('href', authorObj.pocket);
 			$("." + author).find('.facebook').css('display', 'block');
 		}
 
-		if (result.github){
-			$("." + author).find('.github').children().attr('href', result.github);
+		if (authorObj.github){
+			$("." + author).find('.github').children().attr('href', authorObj.github);
 			$("." + author).find('.facebook').css('display', 'block');
 		}
 
