--- a/custom-author-archive.hbs
+++ b/custom-author-archive.hbs
@@ -118,15 +118,13 @@ stitchClient.callFunction("FullAuthorDetails").then(result => {
 	$.each( result, function( key, value ) {
 		authorObj = JSON.stringify(result);
 		console.log('plain authorObj = ' + authorObj);
-	  console.log('authorObj' + authorObj);
-		console.log('value' + value);
-		console.log('value' + value);
-		console.log('key' + key);
+		console.log('value' + value.toString());
+		console.log('key' + key.toString());
 		var author = authorObj.author;
-		$("." + author).find('.title').html(authorObj['title']);
+		$("." + author).find('.title').html(authorObj['title'].toString());
 
 		if (authorObj.facebook){
-			$("." + author).find('.facebook').children().attr('href', authorObj['facebook']);
+			$("." + author).find('.facebook').children().attr('href', authorObj['facebook'].toString());
 			$("." + author).find('.facebook').css('display', 'block');
 		}
 
