--- a/custom-author-archive.hbs
+++ b/custom-author-archive.hbs
@@ -120,7 +120,7 @@ stitchClient.callFunction("FullAuthorDetails").then(result => {
 		console.log('plain authorObj = ' + authorObj);
 		console.log('value' + value.toString());
 		console.log('key' + key.toString());
-		var author = authorObj[author;
+		var author = authorObj['author'];
 
 		if (authorObj['title']]){
 			$("." + author).find('.title').html(authorObj['title'].toString());
