--- a/custom-author-archive.hbs
+++ b/custom-author-archive.hbs
@@ -122,7 +122,7 @@ stitchClient.callFunction("FullAuthorDetails").then(result => {
 		console.log('key' + key.toString());
 		var author = authorObj['author'];
 
-		if (authorObj['title']]){
+		if (authorObj['title']){
 			$("." + author).find('.title').html(authorObj['title'].toString());
 		}
 
