--- a/custom-author-archive.hbs
+++ b/custom-author-archive.hbs
@@ -116,7 +116,7 @@ stitchClient.callFunction("FullAuthorDetails").then(result => {
 
 
 	for (var obj in result) {
-		obj = JSON.stringify(obj);
+		authorObj = JSON.stringify(obj);
 		console.log('plain authorObj = ' + authorObj);
 		console.log('value' + value.toString());
 		console.log('key' + key.toString());
