--- a/partials/signup.hbs
+++ b/partials/signup.hbs
@@ -9,12 +9,12 @@
 
   <img src="http://salehriaz.com/Projects/GradientMobileUI/img/text_signup.svg" class="text-signup un" width="205px" style="visibility:hidden;">
 
-  <div class="signup-form un" style="visibility:hidden;">
+  <form class="signup-form un" style="visibility:hidden;">
     <!--<input id="username" class="form-control tr" placeholder="Username" type="text">-->
     <input id="signup-email" class="form-control tr" placeholder="Email" type="text">
     <input id="signup-password" class="form-control tr" placeholder="Password" type="password">
     <button type="button" id="signup-button" class="form-control button-control tr">CREATE ACCOUNT</button>
-  </div>
+  </form>
 
   <div class="options un" style="visibility:hidden;">
   <!--<a class="float-left">Need help?</a>-->
