--- a/custom-author-archive.hbs
+++ b/custom-author-archive.hbs
@@ -116,7 +116,7 @@ stitchClient.callFunction("FullAuthorDetails").then(result => {
 
 
 	for (var i = 0; i < result.length; i++) {
-		authorObj[i] = JSON.stringify(result[i]);
+		var authorObj = JSON.stringify(result[i]);
 		console.log('plain authorObj = ' + authorObj);
 		var author = authorObj['author'];
 
