--- a/custom-author-archive.hbs
+++ b/custom-author-archive.hbs
@@ -119,7 +119,7 @@ stitchClient.callFunction("FullAuthorDetails").then(result => {
 		var authorObj = JSON.stringify(result[i]);
 		console.log('plain authorObj = ' + authorObj);
 		var author = authorObj['author'];
-
+		console.log("authorObj['title'] = " + authorObj['title']);
 		if (authorObj['title']){
 			$("." + author).find('.title').html(authorObj['title'].toString());
 		}
