--- a/src/less/customtemplates.less
+++ b/src/less/customtemplates.less
@@ -118,6 +118,21 @@
       background: linear-gradient(-15deg, rgba(255, 255, 255, .1) 100px ,transparent 0), linear-gradient(15deg, rgba(255, 255, 255, .1) 100px ,transparent 0),linear-gradient(-15deg, rgba(255, 255, 255, .1) 300px ,transparent 0),linear-gradient(15deg, rgba(255, 255, 255, .1) 300px ,transparent 0),linear-gradient(0deg, #749BE1 150px, #9267C7);
     }
 
+    .author {
+      font-size: 1.2em;
+      margin-bottom: 0;
+      line-height: 1;
+      color: #326671;
+    }
+
+    .title {
+      font-size: 14px;
+      font-family: Gordita-Regular;
+      /* font-weight: 600; */
+      color: #326671;
+      margin-bottom: 10px;
+    }
+
     .meta-info {
       color: @text-color;
     }
@@ -235,13 +250,9 @@
     }
 
     .author {
-      font-size: 1.2em;
-      margin-bottom: 5px;
 
       a {
-        font-size: 0.9em;
-        font-weight: 600;
-        color: #0e7d9a;
+        color: #105a6d;
 
         &:hover {
           text-decoration: none;
