--- a/src/less/social.less
+++ b/src/less/social.less
@@ -210,6 +210,10 @@
   color: lighten(#f14861, 10%);
 }
 
+.quora i {
+  color: lighten(#b92b27, 10%);
+}
+
 .rss i {
   color: lighten(@rss-color, 20%)
 }
