--- a/custom-author-archive.hbs
+++ b/custom-author-archive.hbs
@@ -51,12 +51,12 @@
  											{{#if website}}
  												<span class="website"><i class="fal fa-globe"></i><a href="{{website}}" targer="_BLANK">{{website}}</a></span>
  											{{/if}}
- 											{{#if twitter}}
+ 											{{!--}}{{#if twitter}}
  												<span class="twitter"><i class="fab fa-twitter"></i><a href="{{twitter_url}}">{{twitter}}</a></span>
  											{{/if}}
  											{{#if facebook}}
  												<span class="facebook"><a href="{{facebook_url}}"><i class="fab fa-facebook"></i></a></span>
- 											{{/if}}
+ 											{{/if}}--}}
  										</div>
 										</div>
  									</div>
@@ -130,7 +130,7 @@ stitchClient.callFunction("FullAuthorDetails").then(result => {
 		}
 
 		if (authorObj['linkedin']){
-			$("." + author).find('.linkedin').children().attr('href', 'https://linkedin.com/'+ authorObj['linkedin']);
+			$("." + author).find('.linkedin').children().attr('href', 'https://linkedin.com/in/'+ authorObj['linkedin']);
 			$("." + author).find('.linkedin').css('display', 'block');
 		}
 
@@ -140,7 +140,7 @@ stitchClient.callFunction("FullAuthorDetails").then(result => {
 		}
 
 		if (authorObj['quora']){
-			$("." + author).find('.quora').children().attr('href', 'https://quora.com/'+ authorObj['quora']);
+			$("." + author).find('.quora').children().attr('href', 'https://quora.com/profile/'+ authorObj['quora']);
 			$("." + author).find('.quora').css('display', 'block');
 		}
 
@@ -153,6 +153,14 @@ stitchClient.callFunction("FullAuthorDetails").then(result => {
 			$("." + author).find('.github').children().attr('href', 'https://github.com/'+ authorObj['github']);
 			$("." + author).find('.github').css('display', 'block');
 		}
+
+		if (authorObj['medium']){
+			$("." + author).find('.medium').children().attr('href', 'https://hackingandslacking.com/'+ authorObj['medium']);
+			$("." + author).find('.medium').css('display', 'block');
+		}
+
+
+
 
 	}
 });
