--- a/src/less/customtemplates.less
+++ b/src/less/customtemplates.less
@@ -130,7 +130,7 @@
       font-family: Gordita-Regular;
       /* font-weight: 600; */
       color: #326671;
-      margin-bottom: 10px;
+      margin-bottom: 10px !important;
     }
 
     .meta-info {
@@ -264,7 +264,7 @@
       .author-icons{
         list-style: none;
         display: flex;
-        justify-content: space-between;
+        justify-content: space-around;
         padding: 0 25px;
       }
       .social-btns{
