--- a/custom-author-archive.hbs
+++ b/custom-author-archive.hbs
@@ -51,7 +51,7 @@
  											{{#if website}}
  												<span class="website"><i class="fal fa-globe"></i><a href="{{website}}" targer="_BLANK">{{website}}</a></span>
  											{{/if}}
- 											{{!--}}{{#if twitter}}
+ 											{{!--{{#if twitter}}
  												<span class="twitter"><i class="fab fa-twitter"></i><a href="{{twitter_url}}">{{twitter}}</a></span>
  											{{/if}}
  											{{#if facebook}}
